feat: implement complete gui system with templates and providers